--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <div class="col-md-12">
                         <div class="llogo">
                             <a href="garden-index.html">Gotong-Royongku</a>
+                            <a>My Name,Bambang Sugiarto</a>
                         </div><!-- end logo -->
                     </div>
                 </div><!-- end row -->
@@ -98,7 +99,7 @@
                     <div class="collapse navbar-collapse justify-content-md-center" id="Forest Timemenu">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link color-green-hover" href="garden-index.html">Home</a>
+                                <!-- <a class="nav-link color-green-hover" href="garden-index.html">Home</a> --!>
                             </li>
                         </ul>
                     </div>
