--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="col-md-12">
                         <div class="llogo">
                             <a href="garden-index.html">Gotong-Royongku</a>
-                            <a>My Name,Bambang Sugiarto</a>
+                            <span class="author-name">My Name,Bambang Sugiarto</a>
                         </div><!-- end logo -->
                     </div>
                 </div><!-- end row -->
