--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
@@ -21,44 +23,9 @@
     <!-- Design fonts -->
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet"> 
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-    <!-- FontAwesome Icons core CSS -->
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
-
-    <!-- Responsive styles for this template -->
-    <link href="css/responsive.css" rel="stylesheet">
-
-    <!-- Colors for this template -->
-    <link href="css/colors.css" rel="stylesheet">
-
-    <!-- Version Garden CSS for this template -->
-    <link href="css/version/garden.css" rel="stylesheet">
-
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 <body>
-
-    <div id="wrapper">
-        <div class="collapse top-search" id="collapseExample">
-            <div class="card card-block">
-                <div class="newsletter-widget text-center">
-                    <form class="form-inline">
-                        <input type="text" class="form-control" placeholder="What you are looking for?">
-                        <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
-                    </form>
-                </div><!-- end newsletter -->
-            </div>
-        </div><!-- end top-search -->
-
         <div class="topbar-section">
             <div class="container-fluid">
                 <div class="row">
@@ -85,7 +52,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="llogo">
-                            <a href="garden-index.html">Gotong-Royongku</a>
+                            <a>Gotong-Royongku</a>
                             <span class="author-name">My Name,Bambang Sugiarto</a>
                         </div><!-- end logo -->
                     </div>
@@ -96,15 +63,9 @@
         <header class="header">
             <div class="container">
                 <nav class="navbar navbar-inverse navbar-toggleable-md">
-                    <div class="collapse navbar-collapse justify-content-md-center" id="Forest Timemenu">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <!-- <a class="nav-link color-green-hover" href="garden-index.html">Home</a> --!>
-                            </li>
-                        </ul>
-                    </div>
+                    <div class="collapse navbar-collapse justify-content-md-center" id="Forest Timemenu">                 </div>
                 </nav>
-            </div><!-- end container -->
+            </div> <!-- end container -->
         </header><!-- end header -->
         
         <section class="section wb">
@@ -225,10 +186,8 @@
 
     <!-- Core JavaScript
     ================================================== -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/tether.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/custom.js"></script>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
